# Mr-Dre

./: .env.example  LICENSE  README.md  call_dra.py  evaluate_change.py  evaluate_report.py  feedback.py  feedback_refine.py  pyproject.toml  utils.py
data/: ResearchRubrics.jsonl  ResearcherBench.jsonl  RigorousBench.jsonl
dr_eval/: __init__.py  checklist_eval.py  citation_eval.py  eval_prompts.py  rubric_eval.py
dr_eval/crawler/: __init__.py  cache.py  jina.py
engine/: README.md  __init__.py  cache.py  oai.py  perplexity.py
engine/reviser_agent/: __init__.py  main.py  prompts.py  tools.py
scripts/: evaluate_report.sh  generate_report.sh
